# gfs-data-explorer

./: README.md  config.js  index.html  inventory.js  main.js  style.css  ui.js
g2c-proto/: Dockerfile  README.md  activate.bat  build-image.bat  build-image.sh  cmd_windows.bat  git-dump.bat  install-git.bat  run-interactive.bat  run-interactive.sh  start-python-server.sh  start-server.bat
g2c-proto/work/app/: gfs-api.js  index.html  utils.js
g2c-proto/work/g2clib-wasm/: CMakeLists.txt  build.sh  main.c
g2c-proto/work/jsgrib/: g2clib.wasm  grib2-lookup.js  grib2-tables.json  index.html  main.js  parser.js  style.css  ui.js  worker.js
